# yangen

./: .gitignore  .hgignore  CMakeLists.txt  LICENSE.txt  Readme.md
CMake/Dependencies/: OGRE.cmake  wxWidgets.cmake
CMake/Templates/: Resources.cfg.in
include/: CmdSettings.h  Constants.h
include/Core/: AnimationPanel.h  CameraController.h  EmptyLwString.h  ResourceListener.h  TexturePanelImpl.h  VisualizationPanelImpl.h  YangenWindowImpl.h  wxOgreRenderWindow.h
include/Helpers/: LinkedWidgets.h  LinkedWidgetsPanel.h
include/Yangen/: MaterialSwitcher.h  YangenManager.h
scripts/wxFormBuilder/: Yangen.fbp
src/: main.cpp
src/Autogenerated/: wxYangen.cpp  wxYangen.h
src/Core/: CameraController.cpp  ResourceListener.cpp  TexturePanelImpl.cpp  VisualizationPanelImpl.cpp  YangenWindowImpl.cpp  wxOgreRenderWindow.cpp
src/Helpers/: LinkedWidgets.cpp  LinkedWidgetsPanel.cpp
src/Yangen/: MaterialSwitcher.cpp  YangenManager.cpp
